# fraggen

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  tests.rs
tests/: tests.rs
