[package]
name = "fraggen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-parser = "0.5.3"
clap = { version = "4.3.11", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
thiserror = "1.0.43"
